// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentRow component > should align center 1`] = `
<div>
  <div
    class="w-full flex flex-row content-center items-center lg:mt-1 mb-2"
  />
</div>
`;

exports[`ContentRow component > should align left 1`] = `
<div>
  <div
    class="w-full lg:mt-1 mb-2"
  />
</div>
`;

exports[`ContentRow component > should always render child elements 1`] = `
<div>
  <div
    class="w-full lg:mt-1 mb-2"
  >
    child
  </div>
</div>
`;
